--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@
     <div class="container" ng-view></div>
 
     <script src="components/angular/angular.js"></script>
+    <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+    <script src="scripts/vendor/angularFire.js"></script>
 
     <!-- build:js scripts/scripts.js -->
     <script src="scripts/app.js"></script>
