--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/services/FirebaseApi.js"></script>
+    <script src="scripts/controllers/posts.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
