--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
     <div class="container" ng-view></div>
 
     <script src="components/angular/angular.js"></script>
+    <script src="components/angular-sanitize/angular-sanitize.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="scripts/vendor/angularFire.js"></script>
 
@@ -34,6 +35,7 @@
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/services/FirebaseApi.js"></script>
     <script src="scripts/controllers/posts.js"></script>
+    <script src="scripts/directives/contenteditable.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
