dropped in a markdown filter. Now I can edit text in one browser and see the results live-publish in another!

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 
     <script src="components/angular/angular.js"></script>
     <script src="components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="components/showdown/src/showdown.js"></script>
     <script src="https://cdn.firebase.com/v0/firebase.js"></script>
     <script src="scripts/vendor/angularFire.js"></script>
 
@@ -36,6 +37,7 @@
     <script src="scripts/services/FirebaseApi.js"></script>
     <script src="scripts/controllers/postsEdit.js"></script>
     <script src="scripts/controllers/postsShow.js"></script>
+    <script src="scripts/filters/markdown.js"></script>
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
